--- a/style.css
+++ b/style.css
@@ -274,12 +274,12 @@ svg {
 }
 
 .even-columns > * + * {
-  margin-top: 1em;
+  margin-top: var(--size-500);
 }
 
 @media screen and (min-width: 49em) {
   .even-columns > * + * {
-    margin-left: 1em;
+    margin-left: 2em;
   }
 }
 
@@ -367,6 +367,14 @@ body {
 .nav-list {
   display: flex;
 }
+
+@media screen and (max-width: 49em) {
+  .nav-list > * + *{
+    margin-left: unset;
+    margin-top: var(--size-400);
+  }
+}
+
 
 .nav-list a {
   text-decoration: none;
@@ -457,6 +465,10 @@ body {
 @media screen and (min-width: 49em){
   .hero__image::before{
     width: 45%;
+  }
+
+  .nav-list > * + *{
+    margin-left: var(--size-500);
   }
 
 }
